--- a/senguo.cc/admin/templates/admin/base.html
+++ b/senguo.cc/admin/templates/admin/base.html
@@ -53,7 +53,7 @@
                 {% if current_shop.config.now_on == True %}
                 <li class="active send-now line50">
                     <a href="{{reverse_url('adminOrder')}}?order_type=1">
-                        <!-- <i class="send-img height50 pull-left"></i> -->
+                        <i class="send-img height50 pull-left"></i>
                         立即送
                         <span class="on_sum" id="on_sum">{{num1}}</span>
                     </a>
