--- a/senguo.cc/admin/static/css/admin-shop-set.css
+++ b/senguo.cc/admin/static/css/admin-shop-set.css
@@ -1,7 +1,7 @@
 .set-description{width:100%;background:#f4f5f9;padding:20px;clear:both;}
 .set-description p{margin-bottom:0;}
 
-.set-list{width:100%;margin-top:10px;}
+.set-list{width:100%;margin-top:20px;}
 .set-list .set-list-item p{clear:both;margin:0;}
 .set-list .set-list-item .addres1-box{padding:1px 3px;margin:0 5px 5px 0;border-radius:1px;}
 .set-list .set-list-item .address-list li{float:left;padding:1px 3px;margin:0 5px 5px 0;border-radius:1px;}
@@ -107,7 +107,7 @@
 .bind-btn{color: #0081c2;font-size: 14px;}
 .wrap-img{position: relative;}
 /*支付方式*/
-.edit-box{background-color: #f4f5f9;padding: 15px 20px;margin-top:20px;}
+.edit-box{background-color: #f4f5f9;padding: 15px 20px;}
 .edit-box .mode a{width:120px;height:32px; border-radius:30px;line-height:30px;position:relative;font-size:14px;}
 .edit-box .mode .circle{position:absolute;display:inline-block;width:28px;height:28px;top:2px;background:#fff;border-radius:50%;}
 .edit-box .work-mode{text-indent:28px;}
