--- a/senguo.cc/admin/templates/admin/seckill-detail.html
+++ b/senguo.cc/admin/templates/admin/seckill-detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title%}新建秒杀商品{% end %}
+{% block title%}秒杀详情{% end %}
 {% block head %}
 <link rel="stylesheet" href="{{static_url('css/admin-reset.css')}}"/>
 <link rel="stylesheet" href="{{static_url('css/admin-marketing.css')}}"/>
