--- a/senguo.cc/admin/templates/m-admin/order-detail.html
+++ b/senguo.cc/admin/templates/m-admin/order-detail.html
@@ -70,7 +70,7 @@
                                 <img src="{{imgurl}}" alt="商品图片"/>
                             </dt>
                             <dd class="bg">
-                                <p class="color">{{fruits[key]['fruit_name']}}</p>
+                                <p class="color">{% if 'activity_name' in list(fruits[key].keys()) and fruits[key]['activity_name'] %}（{{fruits[key]['activity_name']}}）{% end %}{{fruits[key]['fruit_name']}}</p>
                                 <p class="color txt-ar"><span class="big">{{fruits[key]['num']}}</span>x<span>1</span>&nbsp;&nbsp;小计：<span>{{round(float(price1)*fruits[key]['num'], 2)}}</span>元</p>
                                 <p class="color">{{fruits[key]['charge']}}</p>
                             </dd>
