--- a/senguo.cc/admin/templates/admin/discount-detail.html
+++ b/senguo.cc/admin/templates/admin/discount-detail.html
@@ -5,7 +5,7 @@
 {% set shop_code = current_shop.shop_code %}
 <div class="wrap-coupontitle">
     <div class="c333 mt10 choose-text">
-        <a href="javascript:;" class="c999 go-back">限时折扣</a>
+        <a href="javascript:;" class="c999 go-back cancel-add-goods">限时折扣</a>
         <span class="c333"> / 折扣详情</span>
     </div>
 </div>
