--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -47,7 +47,7 @@
                     <li class="{{community_active}}"><a href="{{reverse_url('BbsMain')}}" target="_blank">森果社区</a></li>
                     <li class="admin-box">
                         <ul class="text-grey header-top" id="header-top">
-                            <li><a href="{{reverse_url('switchshop')}}" class="text-black">管理后台</a></li> |
+                            <li class="border-right"><a href="{{reverse_url('switchshop')}}" class="text-black">管理后台</a></li>
                             <li><a href="{{reverse_url('ApplyHome')}}" class="text-black">申请接入</a></li>
                         </ul>
                     </li>
