--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -27,10 +27,18 @@
     </div>
     <div class="wrap-paytype">
         <div class="roll-box">
-            <i class="ali"></i>
-            <i class="wx"></i>
-            <i class="weibo"></i>
-            <i class="qq"></i>
+            <i class="ali">
+                <img src="/static/images/alipay_l.png" alt="支付宝登录"/>
+            </i>
+            <i class="wx">
+                <img src="/static/images/wx_l.png" alt="微信登录"/>
+            </i>
+            <i class="weibo">
+                <img src="/static/images/wb_l.png" alt="微博登录"/>
+            </i>
+            <i class="qq">
+                <img src="/static/images/qq_l.png" alt="QQ登录"/>
+            </i>
             <div class="big-roll">
                 <div class="s-roll ani-border"></div>
             </div>
