--- a/senguo.cc/admin/static/css/official_product.css
+++ b/senguo.cc/admin/static/css/official_product.css
@@ -17,11 +17,11 @@
 .phone-bg img{position: absolute;top: 56px;left: 16px;}
 .roll-box{position: absolute;z-index:5;top: 100px;left: 180px;width: 300px;height: 300px;}
 .roll-box>i{display: block;width: 80px;height: 80px;position: absolute;background-size: contain;}
-.roll-box .ali{background-image: url('/static/images/alipay_l.png');top: -70px;left: 76px;}
-.roll-box .wx{background-image: url('/static/images/wx_l.png');top: -20px;left: -20px;}
-.roll-box .weibo{background-image: url('/static/images/wb_l.png');top: 68px;left: -72px;}
-.roll-box .qq{background-image: url('/static/images/qq_l.png');top: 168px;left: -76px;}
-.big-roll{border-radius: 50%;width: 300px;height: 300px;position: absolute;top: 18px;left: 15px;}
+.roll-box .ali{top: -70px;left: 76px;}
+.roll-box .wx{top: -20px;left: -20px;}
+.roll-box .weibo{top: 68px;left: -72px;}
+.roll-box .qq{top: 168px;left: -76px;}
+.big-roll{border-radius: 50%;width: 300px;height: 300px;position: absolute;top: 18px;left: 15px;*display: none;}
 .s-roll{position: absolute;border-radius: 50%;-webkit-box-sizing:content-box;box-sizing:content-box;-ms-box-sizing:content-box;width: 240px;height: 240px;background-color: #d4d8d8;top: 50%;left: 50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);border: 30px solid #e9ebe7;}
 .login-text{color: #999;position: absolute;right: 130px;top: 200px;}
 .login-text>p{font-size: 14px;width: 250px;line-height: 18px;}
