--- a/senguo.cc/admin/templates/customer/online-qrwxpay.html
+++ b/senguo.cc/admin/templates/customer/online-qrwxpay.html
@@ -41,7 +41,7 @@
                     </dd>
                     <dt class="bg">
                     <p class="color">{% if 'activity_name' in list(fruits[charge_type.id].keys()) and fruits[charge_type.id]['activity_name'] %}（{{fruits[charge_type.id]['activity_name']}}）{% end %}{{fruits[charge_type.id]['fruit_name']}}</p>
-                    <p class="color txt-ar"><span class="big">{{fruits[charge_type.id]['num']}}</span>x<span>1</span>&nbsp;&nbsp;小计：<span>{{round(charge_type.price*fruits[charge_type.id]['num'], 2)}}</span>元</p>
+                    <p class="color txt-ar"><span class="big">{{fruits[charge_type.id]['num']}}</span>x<span>1</span>&nbsp;&nbsp;小计：<span>{% if 'discount_rate' in list(fruits[charge_type.id].keys()) %}{{round(charge_type.price*fruits[charge_type.id]['discount_rate']*fruits[charge_type.id]['num'], 2)}}{% else %}{{round(charge_type.price*fruits[charge_type.id]['num'], 2)}}{% end %}</span>元</p>
                     <p class="color">{{fruits[charge_type.id]['charge']}}</p>
                     </dt>
                 </dl>
